--- a/Imersao_Full_Stack_e_Full_Cycle/area_admin/pyproject.toml
+++ b/Imersao_Full_Stack_e_Full_Cycle/area_admin/pyproject.toml
@@ -9,6 +9,8 @@ readme = "../README.md"
 [tool.poetry.dependencies]
 python = "3.12.*"
 django = "5.1.2"
+psycopg2-binary = "2.9.9"
+pillow = "10.4.0"
 
 
 [build-system]
