refactor: alterando parametros

--- a/Imersao_Full_Stack_e_Full_Cycle/transcoding/docker-compose.yaml
+++ b/Imersao_Full_Stack_e_Full_Cycle/transcoding/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     volumes:
       - .:/app
       - external-storage:/media/uploads
+      # - ./mediatest/media/uploads:/media/uploads
+
     tty: true
     stdin_open: true
 
