--- a/Imersao_Full_Stack_e_Full_Cycle/transcoding/docker-compose.yaml
+++ b/Imersao_Full_Stack_e_Full_Cycle/transcoding/docker-compose.yaml
@@ -11,7 +11,27 @@ services:
     tty: true
     stdin_open: true
 
+  postgres:
+      image: postgres:13
+      ports:
+        - "5432:5432"
+      environment:
+        POSTGRES_USER: "user"
+        POSTGRES_PASSWORD: "password"
+        POSTGRES_DB: "converter"
+      volumes:
+        - .docker/postgres:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: teste@teste.com
+      PGADMIN_DEFAULT_PASSWORD: teste
+      
 volumes:
   external-storage:
     external: true
