--- a/Imersao_Full_Stack_e_Full_Cycle/transcoding/.gitignore
+++ b/Imersao_Full_Stack_e_Full_Cycle/transcoding/.gitignore
@@ -7,6 +7,8 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
+.docker/
+
 merged.mp4
 *.exe
 *.exe~
